css/style.css
*{
  margin: 0;
}

body {
  background: cornflowerblue;

}

.site_name {
  text-align: center;
  font-size: 200%;
  color: black;
  padding: 5px;
  font-style: normal;
}

.container {
  width: 100%;
  //max-width: 960px;
  margin: 0 auto;
}

/*----- Nav Menu Styles -----*/

.title {
  display:flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 20px;
  margin-right: 20px;
}

.icon_container {
  margin-right: 5px;
}
.icon {
  width: 25px;
  height: 3px;
  background-color: black;
  margin: 5px 0;
}

nav {
  display: none;
  //background:  #333;
  //border-radius: 5px;
  //margin: 1px;
}

nav ul {
  list-style-type: none;
  text-align: right;
}

nav a {
  text-decoration: none;
  text-align: center;
  color: black;
  //display: block;
  //padding: 10px;
}

nav a:hover {
  background-color:  #555;
}

/*----- Nav parent ------*/

.parent {
  //background-color: blue;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;
  margin-left: 40px;
  margin-right: 40px;
}

.left {
  flex-grow: 1;
  margin: 10px;
}

.right {
  flex-grow: 1;
  margin: 10px;
}


/*----- Media Styles -----*/

.facebook {
  //background: url("../img/facebook.png") no-repeat center;
  //background-size: 80%;
}



/*----- Nav Flex Styles -----*/

@media screen and (max-width: 768px) {
  nav {
    //display: none;
  }

  nav ul {
    padding-right: 20px;
  }

}


@media screen and (min-width: 768px) {

  .icon {
    display: none;
  }

  .site_name {
    text-align: left;
  }

  nav ul {
    display:flex;
    justify-content: flex-start;
    align-self: flex-end;
    overflow: auto;
  }

  nav li {
    flex: 1 1 0;
  }

  nav {
    background:  #333;
    border-radius: 5px;
    margin: 1px;
    display: flex;
    justify-content: space-between;
  }

  nav a {
    color: #fff;
    display: block;
    padding: 10px;

  }

  .parent {
    flex-direction: row;
  }

}

